Added new fields to Sample and Removed Lab required for only guinea-word Added Fields dateSpecimenSentToRegion, nameOfPersonWhoReceivedSpecimenAtRegion, dateSpecimenReceivedAtRegion, dateSpecimenSentToNational, nameOfPersonWhoReceivedSpecimenAtNational, dateSpecimenReceivedAtNational Implemented getters and setters for the fields in SampleDto and Sample Entity Added logic in facade to ensure Sample for Guinea word can be saved without lab