@@ -58,7 +58,7 @@ import de.symeda.sormas.ui.UserProvider;
 import de.symeda.sormas.ui.utils.*;
 import de.symeda.sormas.ui.utils.DateFormatHelper;
 import de.symeda.sormas.ui.utils.DateTimeField;
-import java.util.Date;
+
 import org.apache.commons.collections.CollectionUtils;
 import org.vaadin.hene.popupbutton.PopupButton;
 
@@ -277,13 +277,13 @@ public abstract class AbstractSampleForm extends AbstractEditForm<SampleDto> {
     protected static final String GUINEA_WORM_LAYOUT =
 				fluidRowLocs(SampleDto.UUID, REPORT_INFO_LABEL_LOC) +
                 fluidRowLocs(SampleDto.SAMPLE_DATE_TIME) +
-				fluidRowLocs(SampleDto.LAB, SampleDto.LAB_DETAILS) +
-				fluidRowLocs(6, SampleDto.SAMPLE_MATERIAL) +
+//				fluidRowLocs(SampleDto.LAB, SampleDto.LAB_DETAILS) +
+//				fluidRowLocs(6, SampleDto.SAMPLE_MATERIAL) +
 				loc(HEADING_SPECIMEN_HANDLING) +
 				fluidRowLocs(SampleDto.SPECIMEN_SAVED_AND_PRESEVED_IN_ALCOHOL) +
 				fluidRowLocs(SampleDto.SPECIMEN_SAVED_AND_PRESEVED_IN_ALCOHOL_WHY) +
-				fluidRowLocs(SampleDto.DATE_FORM_SENT_TO_REGION, SampleDto.RECEIVED_BY_REGION, SampleDto.DATE_FORM_RECEIVED_AT_REGION) +
-				fluidRowLocs(SampleDto.DATE_FORM_SENT_TO_NATIONAL, SampleDto.RECEIVED_BY_NATIONAL, SampleDto.DATE_FORM_RECEIVED_AT_NATIONAL) +
+				fluidRowLocs(SampleDto.DATE_SPECIMEN_SENT_TO_REGION, SampleDto.NAME_OF_PERSON_WHO_RECEIVED_SPECIMEN_AT_REGION, SampleDto.DATE_SPECIMEN_RECEIVED_AT_REGION) +
+				fluidRowLocs(SampleDto.DATE_SPECIMEN_SENT_TO_NATIONAL, SampleDto.NAME_OF_PERSON_WHO_RECEIVED_SPECIMEN_AT_NATIONAL, SampleDto.DATE_SPECIMEN_RECEIVED_AT_NATIONAL) +
 				loc(NATIONAL_SECRETARIAT_ONLY) +
 				fluidRowLocs(SampleDto.SENT_FOR_CONFIRMATION_NATIONAL, SampleDto.SENT_FOR_CONFIRMATION_NATIONAL_DATE, SampleDto.SENT_FOR_CONFIRMATION_TO) +
 				fluidRowLocs(6, SampleDto.DATE_RESULT_RECEIVED_NATIONAL) +
@@ -806,12 +806,15 @@ public abstract class AbstractSampleForm extends AbstractEditForm<SampleDto> {
 				SampleDto.SPECIMEN_CONDITION,
 				Arrays.asList(SampleDto.NO_TEST_POSSIBLE_REASON),
 				Arrays.asList(SpecimenCondition.NOT_ADEQUATE));
-		FieldHelper.setVisibleWhen(
-				getFieldGroup(),
-                List.of(SampleDto.LAB),
-				SampleDto.SAMPLE_PURPOSE,
-				Arrays.asList(SamplePurpose.EXTERNAL, null),
-				true);
+
+				if (disease != Disease.GUINEA_WORM) {
+						FieldHelper.setVisibleWhen(
+								getFieldGroup(),
+								List.of(SampleDto.LAB),
+								SampleDto.SAMPLE_PURPOSE,
+								Arrays.asList(SamplePurpose.EXTERNAL, null),
+								true);
+				}
 	}
 
 	protected void initializeRequestedTestFields() {
@@ -1488,16 +1491,18 @@ public abstract class AbstractSampleForm extends AbstractEditForm<SampleDto> {
 	}
 
 	public void handleGuineaWorm() {
-		addField(SampleDto.DATE_FORM_SENT_TO_REGION, DateField.class);
-		addField(SampleDto.DATE_FORM_RECEIVED_AT_REGION, DateField.class);
-		addField(SampleDto.DATE_FORM_SENT_TO_NATIONAL, DateField.class);
-		addField(SampleDto.DATE_FORM_RECEIVED_AT_NATIONAL, DateField.class);
-		addFields(SampleDto.RECEIVED_BY_REGION, SampleDto.RECEIVED_BY_NATIONAL);
+		addFields(
+				SampleDto.DATE_SPECIMEN_SENT_TO_REGION,
+				SampleDto.NAME_OF_PERSON_WHO_RECEIVED_SPECIMEN_AT_REGION,
+				SampleDto.DATE_SPECIMEN_RECEIVED_AT_REGION,
+				SampleDto.DATE_SPECIMEN_SENT_TO_NATIONAL,
+				SampleDto.NAME_OF_PERSON_WHO_RECEIVED_SPECIMEN_AT_NATIONAL,
+				SampleDto.DATE_SPECIMEN_RECEIVED_AT_NATIONAL
+		);
 
 		setVisible(true,
 				SampleDto.SPECIMEN_SAVED_AND_PRESEVED_IN_ALCOHOL,
 				SampleDto.SENT_FOR_CONFIRMATION_NATIONAL,
-				SampleDto.DATE_FORM_SENT_TO_NATIONAL,
 				SampleDto.USE_OF_CLOTH_FILTER,
 				SampleDto.REMARKS);
 
